@@ -10,7 +10,8 @@ v2.0-git
 v1.2.5-cvs
 ----------
 
-
+[jan] Fix filtering only unseen message if rule should filter all messages in
+      IMAP driver (Jan Kuipers <jrkuipers@lauwerscollege.nl>, Bug #9077).
 
 
 ------
